cmake_minimum_required(VERSION 2.8)
project(anitomy-js)
include_directories(${CMAKE_JS_INC} lib/anitomy)
file(GLOB SOURCE_FILES "src/*.cpp" "src/*.h")
file(GLOB ANITOMY_SOURCE_FILES "lib/anitomy/anitomy/*.cpp" "lib/anitomy/anitomy/*.h")
source_group("anitomy" FILES ${ANITOMY_SOURCE_FILES})
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${ANITOMY_SOURCE_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_JS_INC})
target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})